--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "0.8.5"
   },
   "dependencies": {
+    "firebase": "^3.6.8",
     "material-ui": "^0.16.7",
     "re-base": "^2.5.2",
     "react": "^15.4.2",
