--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "re-base": "^2.5.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.2"
+    "react-router": "^3.0.2",
+    "react-tabs": "^0.8.2"
   },
   "scripts": {
     "start": "react-scripts start",
